cmake_minimum_required(VERSION 3.20)

#--------------------------------------------------------------------
# Add tools
#--------------------------------------------------------------------

add_subdirectory(bench)
add_subdirectory(compare-test)
add_subdirectory(make-test)
add_subdirectory(serializer)
